Updated for Openshift

--- a/charts/sonarqube/values.yaml
+++ b/charts/sonarqube/values.yaml
@@ -2,13 +2,13 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-# If the deployment Type is set to Deployment sonarqube is deployed as a replica set.
 deploymentType: "StatefulSet"
 
-# There should not be more than 1 sonarqube instance connected to the same database. Please set this value to 1 or 0 (in case you need to scale down programmatically).
+# If the deployment Type is set to Deployment sonarqube is deployed as a replica set
+# There should not be more than 1 sonarqube instance connected to the same database
 replicaCount: 1
 
-# This will use the default deployment strategy unless it is overriden
+ # This will use the default deployment strategy unless it is overriden
 deploymentStrategy: {}
 # Uncomment this to scheduler pods on priority
 # priorityClassName: "high-priority"
@@ -20,18 +20,15 @@ deploymentStrategy: {}
 
 ## Is this deployment for OpenShift? If so, we help with SCCs
 OpenShift:
-  enabled: false
+  enabled: true
   createSCC: true
-
-edition: "community"
 
 image:
   repository: sonarqube
-  tag: 9.9.0-{{ .Values.edition }}
+  tag: 8.9-community
   pullPolicy: IfNotPresent
-  # If using a private repository, the imagePullSecrets to use
-  # pullSecrets:
-  #   - name: my-repo-secret
+  # If using a private repository, the name of the imagePullSecret to use
+  # pullSecret: my-repo-secret
 
 # Set security context for sonarqube pod
 securityContext:
@@ -48,6 +45,10 @@ elasticsearch:
   configureNode: true
   bootstrapChecks: true
 
+# also install the nginx ingress helm chart
+nginx:
+  enabled: false
+
 service:
   type: ClusterIP
   externalPort: 9000
@@ -59,23 +60,6 @@ service:
   # loadBalancerSourceRanges:
   #   - 0.0.0.0/0
   # loadBalancerIP: 1.2.3.4
-
-# Optionally create Network Policies
-networkPolicy:
-  enabled: false
-
-  # If you plan on using the jmx exporter, you need to define where the traffic is coming from
-  prometheusNamespace: "monitoring"
-
-  # If you are using a external database and enable network Policies to be created
-  # you will need to explicitly allow egress traffic to your database
-  # expects https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#networkpolicyspec-v1-networking-k8s-io
-  # additionalNetworkPolicys:
-
-# also install the nginx ingress helm chart
-nginx:
-  enabled: false
-
 ingress:
   enabled: false
   # Used to create an Ingress record.
@@ -86,42 +70,29 @@ ingress:
       # For additional control over serviceName and servicePort
       # serviceName: someService
       # servicePort: somePort
-      # the pathType can be one of the following values: Exact|Prefix|ImplementationSpecific(default)
-      # pathType: ImplementationSpecific
-  annotations:
+  annotations: {}
+  # kubernetes.io/ingress.class: nginx
   # kubernetes.io/tls-acme: "true"
   # This property allows for reports up to a certain size to be uploaded to SonarQube
-    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
-
-  # Set the ingressClassName on the ingress record
-  # ingressClassName: nginx
+  # nginx.ingress.kubernetes.io/proxy-body-size: "8m"
 
 # Additional labels for Ingress manifest file
   # labels:
   #  traffic-type: external
   #  traffic-type: internal
   tls: []
-  # Secrets must be manually created in the namespace. To generate a self-signed certificate (and private key) and then create the secret in the cluster please refer to official documentation available at https://kubernetes.github.io/ingress-nginx/user-guide/tls/#tls-secrets
+  # Secrets must be manually created in the namespace.
   # - secretName: chart-example-tls
   #   hosts:
   #     - chart-example.local
 
+# Create Route for OpenShift deployments
 route:
-  enabled: false
-  host: ""
+  enabled: true
+
   # Add tls section to secure traffic. TODO: extend this section with other secure route settings
-  # Comment this out if you want plain http route created.
   tls:
     termination: edge
-
-  annotations: {}
-  # See Openshift/OKD route annotation
-  # https://docs.openshift.com/container-platform/4.10/networking/routes/route-configuration.html#nw-route-specific-annotations_route-configuration
-  # haproxy.router.openshift.io/timeout: 1m
-
-  # Additional labels for Route manifest file
-  # labels:
-  #  external: 'true'
 
 # Affinity for pod assignment
 # Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
@@ -156,32 +127,24 @@ readinessProbe:
   initialDelaySeconds: 60
   periodSeconds: 30
   failureThreshold: 6
-  # Note that timeoutSeconds was not respected before Kubernetes 1.20 for exec probes
-  timeoutSeconds: 1
   # If an ingress *path* other than the root (/) is defined, it should be reflected here
   # A trailing "/" must be included
   sonarWebContext: /
   # sonarWebContext: /sonarqube/
-
 livenessProbe:
   initialDelaySeconds: 60
   periodSeconds: 30
   failureThreshold: 6
-  # Note that timeoutSeconds was not respected before Kubernetes 1.20 for exec probes
-  timeoutSeconds: 1
   # If an ingress *path* other than the root (/) is defined, it should be reflected here
   # A trailing "/" must be included
   sonarWebContext: /
   # sonarWebContext: /sonarqube/
   # If an ingress *path* is defined, it should be reflected here
   # sonar.web.context: /sonarqube
-
 startupProbe:
   initialDelaySeconds: 30
   periodSeconds: 10
   failureThreshold: 24
-  # Note that timeoutSeconds was not respected before Kubernetes 1.20 for exec probes
-  timeoutSeconds: 1
   # If an ingress *path* other than the root (/) is defined, it should be reflected here
   # A trailing "/" must be included
   sonarWebContext: /
@@ -196,25 +159,15 @@ initContainers:
   # the initContainer does not take as much resources.
   resources: {}
 
-# Extra init containers to e.g. download required artifacts
 extraInitContainers: {}
-
-## Array of extra containers to run alongside the sonarqube container
-##
-## Example:
-## - name: myapp-container
-##   image: busybox
-##   command: ['sh', '-c', 'echo Hello && sleep 3600']
-##
-extraContainers: []
+# Extra init containers to e.g. download required artifacts
 
 ## Provide a secret containing one or more certificate files in the keys that will be added to cacerts
 ## The cacerts file will be set via SONARQUBE_WEB_JVM_OPTS and SONAR_CE_JAVAOPTS
 ##
-caCerts:
-  enabled: false
-  image: adoptopenjdk/openjdk11:alpine
-  secret: your-secret
+## caCerts:
+  # image: adoptopenjdk/openjdk11:alpine
+  # secret: your-secret
 
 initSysctl:
   enabled: true
@@ -234,9 +187,9 @@ initFs:
     privileged: true
 
 prometheusExporter:
-  enabled: false
+  enabled: true
   # jmx_prometheus_javaagent version to download from Maven Central
-  version: "0.17.2"
+  version: "0.16.0"
   # Alternative full download URL for the jmx_prometheus_javaagent.jar (overrides prometheusExporter.version)
   # downloadURL: ""
   # if you need to ignore TLS certificates for whatever reason enable the following flag
@@ -258,25 +211,10 @@ prometheusExporter:
   # httpProxy: ""
   # httpsProxy: ""
   # noProxy: ""
-  # Setting the security context to the default sonarqube user 1000/1000
+  # Setting the security context to root as the /data volume is owned by root at this stage
   securityContext:
-    runAsUser: 1000
-    runAsGroup: 1000
-
-prometheusMonitoring:
-  # Generate a Prometheus Pod Monitor (https://github.com/coreos/prometheus-operator)
-  #
-  podMonitor:
-    # Create PodMonitor Resource for Prometheus scraping
-    enabled: false
-    # Specify a custom namespace where the PodMonitor will be created
-    namespace: "default"
-    # Specify the interval how often metrics should be scraped
-    interval: 30s
-    # Specify the timeout after a scrape is ended
-    # scrapeTimeout: ""
-    # Name of the label on target services that prometheus uses as job name
-    # jobLabel: ""
+    runAsUser: 0
+    runAsGroup: 0
 
 # List of plugins to install.
 # For example:
@@ -284,9 +222,9 @@ prometheusMonitoring:
 #  install:
 #    - "https://github.com/AmadeusITGroup/sonar-stash/releases/download/1.3.0/sonar-stash-plugin-1.3.0.jar"
 #    - "https://github.com/SonarSource/sonar-ldap/releases/download/2.2-RC3/sonar-ldap-plugin-2.2.0.601.jar"
-#
 plugins:
   install: []
+  lib: []
 
   # For use behind a corporate proxy when downloading plugins
   # httpProxy: ""
@@ -316,16 +254,10 @@ jvmCeOpts: ""
 ## a monitoring passcode needs to be defined in order to get reasonable probe results
 # not setting the monitoring passcode will result in a deployment that will never be ready
 monitoringPasscode: "define_it"
-# Alternatively, you can define the passcode loading it from an existing secret specifying the right key
-# monitoringPasscodeSecretName: "pass-secret-name"
-# monitoringPasscodeSecretKey: "pass-key"
 
 ## Environment variables to attach to the pods
 ##
 # env:
-#   # If you use a different ingress path from /, you have to add it here as the value of SONAR_WEB_CONTEXT
-#   - name: SONAR_WEB_CONTEXT
-#     value: /sonarqube
 #   - name: VARIABLE
 #     value: my-value
 
@@ -338,11 +270,10 @@ annotations: {}
 resources:
   limits:
     cpu: 800m
-    memory: 4Gi
+    memory: 4096M
   requests:
     cpu: 400m
     memory: 2Gi
-
 persistence:
   enabled: false
   ## Set annotations on pvc
@@ -389,42 +320,24 @@ emptyDir: {}
 # The 'sonar.secretKeyPath' property will be set automatically.
 # sonarSecretKey: "settings-encryption-secret"
 
-## Override JDBC values
-## for external Databases
-jdbcOverwrite:
-  # If enable the JDBC Overwrite, make sure to set `postgresql.enabled=false`
-  enable: false
-  # The JDBC url of the external DB
-  jdbcUrl: "jdbc:postgresql://myPostgress/myDatabase?socketTimeout=1500"
-  # The DB user that should be used for the JDBC connection
-  jdbcUsername: "sonarUser"
-  # Use this if you don't mind the DB password getting stored in plain text within the values file
-  jdbcPassword: "sonarPass"
-  ## Alternatively, use a pre-existing k8s secret containing the DB password
-  # jdbcSecretName: "sonarqube-jdbc"
-  ## and the secretValueKey of the password found within that secret
-  # jdbcSecretPasswordKey: "jdbc-password"
+## JDBC Database Type; by default postgresql. To use a different Database type, adjust
+jdbcDatabaseType: postgresql
+
+## Override JDBC URL
+# jdbcUrlOverride: "jdbc:postgresql://myPostgress/myDatabase;socketTimeout=1500"
 
 ## Configuration values for postgresql dependency
-## ref: https://github.com/bitnami/charts/blob/master/bitnami/postgresql/README.md
+## ref: https://github.com/kubernetes/charts/blob/master/stable/postgresql/README.md
 postgresql:
-  # Enable to deploy the bitnami PostgreSQL chart
+  # Enable to deploy the PostgreSQL chart
   enabled: true
-  ## postgresql Chart global settings
-  # global:
-  #   imageRegistry: ''
-  #   imagePullSecrets: ''
-  ## bitnami/postgres image tag
-  # image:
-  #   tag: 11.7.0-debian-10-r9
-  # existingSecret Name of existing secret to use for PostgreSQL passwords
-  # The secret has to contain the keys postgresql-password which is the password for postgresqlUsername when it is
-  # different of postgres, postgresql-postgres-password which will override postgresqlPassword,
-  # postgresql-replication-password which will override replication.password and postgresql-ldap-password which will be
-  # used to authenticate on LDAP. The value is evaluated as a template.
+  # To use an external PostgreSQL instance, set enabled to false and uncomment
+  # the line below:
+  # postgresqlServer: ""
+  # To use an external secret for the password for an external PostgreSQL
+  # instance, set enabled to false and provide the name of the secret on the
+  # line below:
   # existingSecret: ""
-  #
-  # The bitnami chart enforces the key to be "postgresql-password". This value is only here for historic purposes
   # existingSecretPasswordKey: "postgresql-password"
   postgresqlUsername: "sonarUser"
   postgresqlPassword: "sonarPass"
@@ -447,31 +360,25 @@ postgresql:
   securityContext:
     # For standard Kubernetes deployment, set enabled=true
     # If using OpenShift, enabled=false for restricted SCC and enabled=true for anyuid/nonroot SCC
-    enabled: true
-    # fsGroup specification below are not applied if enabled=false. enabled=false is the required setting for OpenShift "restricted SCC" to work successfully.
+    enabled: false
+    # fsGroup and runAsUser specifications below are not applied if enabled=false. enabled=false is the required setting for OpenShift "restricted SCC" to work successfully.
     # postgresql dockerfile sets user as 1001
     fsGroup: 1001
-  containerSecurityContext:
-    # For standard Kubernetes deployment, set enabled=true
-    # If using OpenShift, enabled=false for restricted SCC and enabled=true for anyuid/nonroot SCC
-    enabled: true
-    # runAsUser specification below are not applied if enabled=false. enabled=false is the required setting for OpenShift "restricted SCC" to work successfully.
-    # postgresql dockerfile sets user as 1001
     runAsUser: 1001
   volumePermissions:
     # For standard Kubernetes deployment, set enabled=false
     # For OpenShift, set enabled=true and ensure to set volumepermissions.securitycontext.runAsUser below.
-    enabled: false
+    enabled: true
     # if using restricted SCC set runAsUser: "auto" and if running under anyuid/nonroot SCC - runAsUser needs to match runAsUser above
     securityContext:
-      runAsUser: 0
+      runAsUser: "auto"
   shmVolume:
     chmod:
       enabled: false
   serviceAccount:
     ## If enabled = true, and name is not set, postgreSQL will create a serviceAccount
     enabled: false
-    # name:
+#    name:
 
 # Additional labels to add to the pods:
 # podLabels:
@@ -482,18 +389,13 @@ podLabels: {}
 sonarqubeFolder: /opt/sonarqube
 
 tests:
-  image: bitnami/minideb-extras
   enabled: true
-  resources: {}
-  initContainers:
-    image: bats/bats:1.2.1
-    resources: {}
+  # image: bitnami/minideb-extras
 
 # For OpenShift set create=true to ensure service account is created.
 serviceAccount:
-  create: false
+  create: true
   # name:
-  # automountToken: false # default
   ## Annotations for the Service Account
   annotations: {}
 
@@ -521,22 +423,9 @@ extraConfig:
   configmaps: []
 
 # account:
-# The values can be set to define the current and the (new) custom admin passwords at the startup (the username will remain "admin")
 #   adminPassword: admin
 #   currentAdminPassword: admin
-# The above values can be also provided by a secret that contains "password" and "currentPassword" as keys. You can generate such a secret in your cluster
-# using "kubectl create secret generic admin-password-secret-name --from-literal=password=admin --from-literal=currentPassword=admin"
-#   adminPasswordSecretName: ""
-#   securityContext: {}
-#   resources:
-#     limits:
-#       cpu: 100m
-#       memory: 128Mi
-#     requests:
-#       cpu: 100m
-#       memory: 128Mi
 # curlContainerImage: curlimages/curl:latest
 # adminJobAnnotations: {}
-# sonarWebContext: /
 
 terminationGracePeriodSeconds: 60
